# website

./: .env  .envrc  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile.toml  README.md  Trunk.toml  deploy.cmd  deploy.sh  dev.sh  docker-compose.yml  index.html  run.sh  setup.cmd  setup.sh  sitemap.xml
.devcontainer/: devcontainer.json
admin-dash/: Cargo.toml  Trunk.toml  index.html
admin-dash/assets/: sw.js
admin-dash/src/: app.rs  main.rs
backend/: .gitignore  Cargo.toml  Makefile.toml  _build.rs
backend/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/components/: clink.rs  mod.rs
common/src/database/project/: description_part.rs  download.rs  list.rs  mod.rs  p_type.rs  single.rs  tags.rs
common/src/traits/: mod.rs  to_clink.rs
dockerfiles/deploy/web/: Dockerfile
dockerfiles/dev/admin-dash/: Dockerfile
dockerfiles/dev/backend/: Dockerfile
dockerfiles/dev/frontend/: Dockerfile
frontend/: Cargo.toml  Makefile.toml  Trunk.toml  index.html  webdriver.json
frontend/src/: main.rs
frontend/src/components/pages/: mod.rs
frontend/src/components/pages/blog/: mod.rs  post.rs
frontend/src/components/pages/core/: footer.rs  header.rs  mod.rs  page.rs
frontend/src/components/pages/project/: mod.rs
frontend/src/components/pages/projects/: mod.rs
frontend/src/core/: mod.rs  s_page.rs  state.rs
frontend/src/models/: blog_list.rs  frontmatter.rs  mod.rs
frontend/styles/: index.scss
frontend/styles/custom/: body.scss  footer.scss  header.scss  main.scss  style.scss
frontend/styles/custom/pages/: blog_post.scss  project.scss  projects.scss
src/: Cargo.toml  main.rs
src/components/pages/: mod.rs
src/models/: mod.rs
src/models/project/: download.rs  single.rs
src/raw_html/: nav_toggler.html
src/src/: main.rs
src/traits/: to_clink.rs
styles/: index.scss
styles/custom/: body.scss  footer.scss  main.scss
styles/custom/pages/: blog_list.scss  project.scss  projects.scss
surreal/surreal.db/: 000008.sst  000013.sst  IDENTITY  LOG  LOG.old.1666586452527001  LOG.old.1666600652866736  LOG.old.1666601965781653  LOG.old.1666618734925172  LOG.old.1666624205522274  MANIFEST-000010  MANIFEST-000023  MANIFEST-000031  MANIFEST-000035
(+8 files in other folders)
