[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { version = "0.1.0", path = "../common" }
anyhow = "1.0"
actix-web = "4.2.1"
actix-files = "0.6.2"

dotenv = "0.15"
log = "0.4"
pretty_env_logger = "0.4.0"
