[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.2.4", features = ["web", "router"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
gloo = "0.8.0"
gloo-utils = "0.1.5"
web-sys = "0.3.60"
c314-utils = "0.2.0"
