[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { version = "0.1.0", path = "../common" }
gloo = "0.8.0"
yew = "0.19.3"
yew-router = "0.16.0"
yewdux = "0.8.2"

[dev-dependencies]
web-sys = "0.3.55"
gloo-utils = "0.1.0"
wasm-bindgen = "0.2.78"
wasm-bindgen-test = "0.3.28"

[profile.release]
strip = true
debug = 0
overflow-checks = true
lto = true
opt-level = 3
