[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
dioxus = { version = "0.2.4", features = ["web", "router", "fermi"] }
gloo = "0.8.0"
gloo-utils = "0.1.5"
state = "0.5.3"
